--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
       const password = document.getElementById('password').value;
 
       // Send login data to the server
-      fetch('http://your-server-ip:3000/login', {
+      fetch('https://github.com/Dawgblood28/Testing', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
